# CMake-Template

./: CMakeLists.txt  README.md  multisource.cpp  spack.yaml
.github/workflows/: cmake.yml
